Fixed alignment

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -115,16 +115,16 @@
 			flex-direction: column;
 		}
 		.el {
+			width: 100%;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
-			margin: 1rem;
-			padding: 1.5rem;
+			margin: 2rem;
 			text-align: center;
 			p,
 			a {
-				margin: 0;
+				margin: 10px 0 0;
 				font-weight: bold;
 				font-size: 1.25rem;
 			}
